fix overflow in slider

--- a/src/components/SimpleSlider/SimpleSlider.scss
+++ b/src/components/SimpleSlider/SimpleSlider.scss
@@ -12,6 +12,7 @@
 }
 
 .slider {
+    overflow: hidden;
     .slider-bg{
         height: 100%;
         transform: scale(1);
